<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="apps.szte.runningapp.Activities$RunningActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <apps.szte.runningapp.ownchronometer.PausableChronoMeter
            android:id="@+id/stopper"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:textSize="160sp"
            android:visibility="visible" />

        <Button
            android:id="@+id/startPauseButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/stopper"
            android:layout_centerHorizontal="true"
            android:onClick="startPauseButtonOnClick"
            android:background="@drawable/startpause_style_button"
            android:text="@string/stopperStartPauseButton" />

        <TextView
            android:id="@+id/speed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/startPauseButton"
            android:layout_marginStart="13dp"
            android:text="@string/Speed"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:visibility="visible" />

        <TextView
            android:id="@+id/avgSpeed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/speed"
            android:layout_below="@+id/speed"
            android:text="@string/AvgSpeed"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:visibility="visible" />

        <TextView
            android:id="@+id/speedCont"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/speed"
            android:layout_alignBottom="@+id/speed"
            android:layout_toStartOf="@+id/startPauseButton" />

        <TextView
            android:id="@+id/avgSpeedCont"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/avgSpeed"
            android:layout_alignBottom="@+id/avgSpeed"
            android:layout_alignStart="@+id/distanceCont" />

        <TextView
            android:id="@+id/distance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/avgSpeed"
            android:layout_below="@+id/avgSpeedCont"
            android:text="@string/distance" />

        <TextView
            android:id="@+id/distanceCont"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignStart="@+id/startPauseButton"/>

    </RelativeLayout>
</android.support.constraint.ConstraintLayout>